SW-1262 Align sort select correctly according to GEL
GEL requires select boxes to be inline and aligned to the middle.  This
adjust the CSS on the sort by select to meet this criteria.

--- a/src/shared/public/scss/_wg.scss
+++ b/src/shared/public/scss/_wg.scss
@@ -605,6 +605,16 @@
     display: inline-block;
   }
 
+  .govuk-form-select-inline {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .govuk-form-select-inline > label {
+    margin-right: 1em;
+  }
+
   .govuk-error-message {
     font-weight: normal;
     color: colours.$black;
